# DailyArxiv

./: .gitignore  README.md  analyze_trends.py  cluster.py  cluster_topics.py  daily_arxiv_feed.py  embed.py  fetch_arxiv.py  final_daily_arxiv_demo.py  generate_report.py  llm_processor.py  logging_setup.py  main.py  next_prompt.md  preprocess.py  pyproject.toml  summarize.py  summarize_clusters.py  test_llm.py
data/: arxiv_2025-11-25.json  arxiv_2025-11-26.json  arxiv_2025-11-27.json  arxiv_2025-12-01.json  arxiv_2025-12-03.json  arxiv_2025-12-04.json  arxiv_hep-ph-hep-th-hep-ex-hep-lat_2025-11-26.json  arxiv_physics_2025-11-26.json  arxiv_quant-ph_2025-11-28.json  cluster_summaries_2025-11-24.json  cluster_summaries_2025-11-25.json  cluster_summaries_2025-11-26.json  cluster_summaries_2025-11-27.json  cluster_summaries_2025-12-01.json  cluster_summaries_2025-12-03.json  cluster_summaries_2025-12-04.json  cluster_summaries_hep-ph-hep-th-hep-ex-hep-lat_2025-11-26.json  cluster_summaries_physics_2025-11-26.json  cluster_summaries_quant-ph_2025-11-28.json  clusters_2025-11-24.json  clusters_2025-11-26.json  clusters_2025-11-27.json  clusters_2025-12-02.json  clusters_2025-12-04.json  clusters_hep-ph-hep-th-hep-ex-hep-lat_2025-11-26.json  clusters_physics_2025-11-26.json  clusters_quant-ph_2025-11-28.json  trend_report_2025-11-24.json  trend_report_2025-11-25.json  trend_report_2025-11-26.json  trend_report_2025-11-27.json  trend_report_2025-12-01.json  trend_report_hep-ph-hep-th-hep-ex-hep-lat_2025-11-26.json  trend_report_physics_2025-11-26.json  (+1 more)
(+35 files in other folders)
