[project]
name = "dailyarxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "openai>=1.0.0", # DeepSeek兼容OpenAI SDK
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.38",
    "sentence-transformers>=3.0.0",
    "jinja2>=3.1.4",
    "tzdata>=2024.1", # Timezone data for Windows
    "umap-learn",
]
